syntax = "proto3";

package pb.broker;

import "google/protobuf/any.proto";

option go_package = "github.com/kaisawind/message/pb;pb_broker";

service Message {
  rpc Publish(PubReq) returns (PubResp) {}
  rpc Subscribe(SubReq) returns (stream PubReq) {}
}

message PubReq {
  string topic = 1;
  google.protobuf.Any req = 2;
  google.protobuf.Any resp = 3;
}

message PubResp {
  int32 status = 1;
}

message SubReq {
  oneof Oneof {
    string topic = 1;
    Topics topics = 2;
  }
}

message Topics {
  repeated string topics = 1;
}